Updating contrast issues for AA and AAA compliance

--- a/src/assets/scss/00_base/_functions.scss
+++ b/src/assets/scss/00_base/_functions.scss
@@ -33,6 +33,10 @@
     @return get-color("accents", $color);
 }
 
+@function get-color-casestudies($color: "kidsdiscover") {
+    @return get-color("casestudies", $color);
+}
+
 // Font Functions
 // ------------------------------------
 
