--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -30,6 +30,10 @@
         padding: 80px 0;
         padding-left: 0;
 
+        fieldset .a-radio + label {
+            color: get-color-primary("white");
+        }
+
         &.-light {
             background: get-color("primary", "white");
 
@@ -38,6 +42,10 @@
             }
 
             .o-contact-form__wrapper__heading {
+                color: get-color-primary("after-hours");
+            }
+
+            fieldset .a-radio + label {
                 color: get-color-primary("after-hours");
             }
         }
