--- a/src/assets/scss/03_organism/_slider.scss
+++ b/src/assets/scss/03_organism/_slider.scss
@@ -163,7 +163,7 @@
     right: 30px;
     top: 50%;
     transform: translateY(-50%);
-    background: get-color-primary("fresh");
+    background: get-color-primary("after-hours");
     border-radius: 50%;
     width: 90px;
     height: 90px;
